# pillcounter

./: .gitignore  CMakeLists.txt  ImageProviders.py  LabeledDial.qml  PillCounter.py  README.md  main.py  main.qml  pillcounter.pyproject  pyproject.toml
ml/: dl-kasetsart-university-rpmpb.py  yolov8_train.py
scripts/: countpill.py  countpill_chatgpt.py
src/: appconfig.cpp  appconfig.h  main.cpp
src/pillcounter/: LabeledDial.qml  Main.qml  PillCounter.py  config.py  main.py  main.qml
